# klassfmt

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .yamllint.yaml  Cargo.toml  README.md  build.rs  grammar.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: merge-group.yml  pull-request.yml  push.yml
src/: grammar.json  lib.rs  markdown.rs  node-types.json  parser.c  printer.rs
src/printer/: comments.rs
tests/: cli.rs  corpus_churn.rs  format_core.rs  golden.rs  markdown.rs  parse_corpus.rs
